add event ref to the controller
